<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">APEX AR</string>
    <string name="app_desc">DigiLens AR integration for ATAK</string>
    
    <string name="connection_settings">Connection Settings</string>
    <string name="ip_address">IP Address</string>
    <string name="port">Port</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="status">Status</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="save_settings">Save Settings</string>
    
    <string name="display_settings">Display Settings</string>
    <string name="max_distance">Max Distance (m)</string>
    <string name="connection_error">Connection Error</string>
</resources>
